--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,9 @@
-I'm from index
+<p>
+	Hey there! I'm <strong>Stanley Cen</strong>, a junior living in Portland, Oregon, and a programming enthusiast.
+</p>
+<p>
+	 I'm interested in all things related to computer science, am proficient in more than 10 programming languages and currently I'm interested in algorithms and reverse engineering.
+</p>
+<p>
+	Here you'll find a blog I occasionally post in and various projects I've worked on. Many of my projects are <a href="http://github.com/scen/">open source</a>.
+</p>
