--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,7 @@
 	</title>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'/>
 	<link href="/main.css" rel="stylesheet"/>
-	<script type="text/javascript" src="ga.js"></script>
+	<script type="text/javascript" src="/ga.js"></script>
 </head>
 <body>
 	<header>
