--- a/views/project.erb
+++ b/views/project.erb
@@ -2,14 +2,17 @@
 <div class="project_wrapper">
 	<div class="header">
 		<h3><%= proj.title %></h3>
+		<% if proj.repo %>
+		<a title="Git Repository" class="repo" href="<%= proj.repo %>"><span class="src"></span></a>
+		<% end %>
 		<ul class="tags">
 			<% proj.tags.each do |tag| %>
 			<li class="<%= get_tag_class tag %>"><%= tag %></li>
 			<% end %>
 		</ul>
 	</div>
-	<p>
+	<div class="proj-content">
 		<%= format_post proj.content %>
 		<style><%= Pygments.css %></style>
-	</p>
+	</div>
 </div>
