--- a/views/main.scss
+++ b/views/main.scss
@@ -124,7 +124,64 @@ section {
         margin-bottom:16px;
         font-size:12px;
     }
-
+    .post {
+        border-bottom:1px solid #efefef;
+        margin-bottom:16px;
+        
+        .masthead {
+            display:block;
+            line-height:32px;
+            vertical-align:bottom;
+            border-bottom:1px solid #efefef;
+            padding-bottom:4px;
+            margin-bottom:16px;
+            
+            h2 {
+                font-size:22px;
+                float:left;
+                margin-bottom:0px;
+                max-width:500px;
+                a {
+                    color:inherit;
+                    border:none;
+                    &:hover {
+                        color:#666677;
+                    }
+                }
+            }
+            
+            span {
+                float:right;
+                font-size:14px;
+            }
+        }
+    }
+    
+    ul.previous-posts {
+        display:block;
+        width:760px;
+        margin-left:0px;
+        
+        li {
+            display:block;
+            float:left;
+            width:364px;
+            margin-right:16px;
+            padding-bottom:16px;
+            border-bottom:1px solid #efefef;
+            margin-bottom:16px;
+            h3 {
+                margin-bottom:8px;
+                a {
+                    color:inherit;
+                    border:none;
+                    &:hover {
+                        color:#666677;
+                    }
+                }
+            }
+        }
+    }
     .project_wrapper
     {
     	ul {
