changes to height

--- a/views/main.scss
+++ b/views/main.scss
@@ -166,6 +166,7 @@ section {
             display:block;
             float:left;
             width:364px;
+            height:64px;
             margin-right:16px;
             padding-bottom:16px;
             border-bottom:1px solid #efefef;
