edited about page

--- a/views/about.erb
+++ b/views/about.erb
@@ -3,5 +3,8 @@
 	I'm a 11<sup>th</sup> grade programming enthusiast living in Portland, Oregon.
 </p>
 <p>
-	Programming is my favorite hobby and I have been programming since 3<sup>rd</sup> grade. I'm proficient in more than 10 programming languages, including C++, C, C&#9839;, Java, Python, Ruby, MySQL, PHP, HTML, Javascript, CSS, and Lua. Although I've delved into into many parts of computer science including web development, computer vision, reverse engineering, and algorithms, I am currently very interested in algorithms. I compete in the <a href="http://usaco.org">USA Computing Olympiad</a>.
+	Programming is my favorite hobby and I have been programming since 3<sup>rd</sup> grade. I'm proficient in more than 10 programming languages, including C++, C, C&#9839;, Java, Python, Ruby, MySQL, PHP, HTML, Javascript, CSS, and Lua. Although I've delved into into many parts of computer science including web development, computer vision, reverse engineering, and algorithms, I am currently very interested in algorithms.
+</p>
+</p>
+	I compete in the <a href="http://usaco.org">USA Computing Olympiad</a>.
 </p>
