removed newrelic config file

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,4 +1,6 @@
-<h3>Contact</h3>
-<p>
-	Under construction
-</p>
+<div id="contact_wrapper">
+	<h3>Contact</h3>
+	<div id="contact_icons">
+		
+	</div>
+</div>
