Fix dangling angle bracket in contact page

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,6 +1,6 @@
 <div id="contact_wrapper">
 	<h3>Contact</h3>
 	<p>
-		Feel free to <a href="http://www.google.com/recaptcha/mailhide/d?k=01vxJtIxVGu_eJe0Fxs0AM_A==&amp;c=L2CMOaRjyhbCdhpF0d12VdXsvxL1ZXgaln_kX2lS0PA=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501vxJtIxVGu_eJe0Fxs0AM_A\75\75\46c\75L2CMOaRjyhbCdhpF0d12VdXsvxL1ZXgaln_kX2lS0PA\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="email me">email me</a>> at any time!
+		Feel free to <a href="http://www.google.com/recaptcha/mailhide/d?k=01vxJtIxVGu_eJe0Fxs0AM_A==&amp;c=L2CMOaRjyhbCdhpF0d12VdXsvxL1ZXgaln_kX2lS0PA=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501vxJtIxVGu_eJe0Fxs0AM_A\75\75\46c\75L2CMOaRjyhbCdhpF0d12VdXsvxL1ZXgaln_kX2lS0PA\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="email me">email me</a> at any time!
 	</p>
 </div>
