--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,11 @@
 	</title>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'/>
 	<link href="/main.css" rel="stylesheet"/>
+	<link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fancybox/2.1.4/jquery.fancybox.css" />
 	<script type="text/javascript" src="/ga.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+	<script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.4/jquery.fancybox.js"></script>
+	<script type="text/javascript" src="/main.js"></script>
 </head>
 <body>
 	<header>
