--- a/views/main.scss
+++ b/views/main.scss
@@ -30,6 +30,10 @@ ul {
 	clear: both;
 }
 
+div.center {
+    text-align: center;
+}
+
 .amp {
 	font-family: Baskerville, Palatino, "Book Antiqua", serif;
 	font-style: italic;
