--- a/views/main.scss
+++ b/views/main.scss
@@ -34,6 +34,10 @@ div.center {
     text-align: center;
 }
 
+div.border-bottom {
+    margin-bottom: 30px;
+}
+
 .amp {
 	font-family: Baskerville, Palatino, "Book Antiqua", serif;
 	font-style: italic;
