--- a/views/main.scss
+++ b/views/main.scss
@@ -38,6 +38,17 @@ div.border-bottom {
     margin-bottom: 30px;
 }
 
+span.roll {
+    background: url(/mag.png) center center no-repeat #000;
+    height: 100%;
+    width: 100%;
+    z-index: 10;
+    position: absolute;
+    -webkit-box-shadow: 0px 0px 4px #000;
+    -moz-box-shadow: 0px 0px 4px  #000;
+    box-shadow: 0px 0px 4px  #000;
+}
+
 .amp {
 	font-family: Baskerville, Palatino, "Book Antiqua", serif;
 	font-style: italic;
