--- a/views/main.scss
+++ b/views/main.scss
@@ -38,7 +38,7 @@ div.border-bottom {
     margin-bottom: 30px;
 }
 
-div.hover {
+div.hover > a > img {
     -webkit-transition: opacity .2s ease;
     -moz-transition: opacity .2s ease;
     -o-transition: opacity .2s ease;
@@ -46,7 +46,7 @@ div.hover {
     -transition: opacity .2s ease;
 }
 
-div.hover:hover {
+div.hover:hover > a > img {
     opacity: 0.7;
 }
 
