--- a/views/main.scss
+++ b/views/main.scss
@@ -60,6 +60,7 @@ a.lightbox {
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+    float: left;
 }
 
 header {
