--- a/views/main.scss
+++ b/views/main.scss
@@ -50,7 +50,12 @@ header, section {
 	margin-bottom: 16px;
 }
 
+a.lightbox {
+    border: none !important;
+}
+
 a.lightbox > img {
+    padding: 4px;
     border: 1px solid #ddd !important;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -58,9 +63,9 @@ a.lightbox > img {
 }
 
 a.lightbox > img:hover {
-    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
-    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075);
+    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075);
 }
 
 header {
