--- a/views/main.scss
+++ b/views/main.scss
@@ -60,12 +60,16 @@ a.lightbox > img {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-}
-
-a.lightbox > img:hover {
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075);
+}
+
+a.lightbox > img:hover {
+    border-color: #0069d6;
+    -webkit-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
+    -moz-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
+    box-shadow: 0 1px 4px rgb(0, 105, 214);
 }
 
 header {
