--- a/views/main.scss
+++ b/views/main.scss
@@ -56,7 +56,7 @@ a.lightbox {
 
 a.lightbox > img {
     padding: 4px;
-    border: 1px solid #ddd !important;
+    border: 1px solid #ddd;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
@@ -66,7 +66,7 @@ a.lightbox > img {
 }
 
 a.lightbox > img:hover {
-    border-color: #0069d6  !important;
+    border-color: #0069d6;
     -webkit-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
     -moz-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
     box-shadow: 0 1px 4px rgb(0, 105, 214);
