Rollback and age update

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <p>
-	Hey there! I'm <strong>Stanley Cen</strong>, a junior living in Portland, Oregon, and a programming enthusiast.
+	Hey there! I'm <strong>Stanley Cen</strong>, a senior living in Portland, Oregon, and a programming enthusiast.
 </p>
 <p>
 	 I'm interested in all things related to computer science, am proficient in more than 10 programming languages and currently I'm interested in algorithms and reverse engineering.
