--- a/views/blog.erb
+++ b/views/blog.erb
@@ -2,7 +2,7 @@
 
 <ul class="previous-posts">
 	<% @posts.drop(1).each_with_index do |post, idx| post = post.last %>
-	<li>
+	<li <%= 'class="bottom"' if idx >= @posts.length - 3 %> >
 		<h3><a href="<%= post_slug_url post.slug %>"><%= post.title %></a></h3>
 		<span><%= post.created_at %></span>
 	</li>
@@ -10,4 +10,5 @@
 	<div style="clear:both;"></div>
 	<% end %>
 	<% end %>
+	<div style="clear:both;"></div>
 </ul>
