--- a/views/blog.erb
+++ b/views/blog.erb
@@ -4,7 +4,7 @@
 	<% @posts.drop(1).each_with_index do |post, idx| post = post.last %>
 	<li <%= 'class="bottom"' if idx >= @posts.length - 3 %> >
 		<h3><a href="<%= post_slug_url post.slug %>"><%= post.title %></a></h3>
-		<span><%= post.created_at %></span>
+		<span><%= post.created_at.strftime("%b %d, %Y") %></span>
 	</li>
 	<% if idx.odd? %>
 	<div style="clear:both;"></div>
