--- a/views/layout.erb
+++ b/views/layout.erb
@@ -38,7 +38,7 @@
 		<%= yield %>
 	</section>
 	<footer>
-		&copy; 2013 Stanley Cen<% if !is_heroku? or (is_heroku? and @@heroku and @@last_commit and @@the_commit) %>; deployed commit <a href="https://github.com/scen/stanleycen.com/commit/<%= get_commit_sha %>">
+		&copy; 2013 Stanley Cen<% if !is_heroku? or (is_heroku? and @heroku and @last_commit and @the_commit) %>; deployed commit <a href="https://github.com/scen/stanleycen.com/commit/<%= get_commit_sha %>">
 		<%= get_commit_sha[0...7] %></a>: <%= get_commit_msg.split(/\n/).first %> (<%= get_commit_time.strftime("%Y-%m-%d %H:%M:%S %Z") %>)<% end %>
 	</footer>
 </body>
