Improve contact page functionality

--- a/views/about.erb
+++ b/views/about.erb
@@ -6,5 +6,5 @@
 	I love computer science and I have been programming since 3<sup>rd</sup> grade. I'm proficient in more than 10 programming languages, including C++, C, C&#9839;, Java, Python, Ruby, MySQL, PHP, HTML, Javascript, CSS, and Lua.
 </p>
 </p>
-	I compete in programming competitions, most notably the <a href="http://usaco.org">USA Computing Olympiad</a>.
+	I compete in programming contests, most notably the <a href="http://usaco.org">USA Computing Olympiad</a>.
 </p>
