--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,6 +1,26 @@
-<div id="contact_wrapper">
-	<h3>Contact</h3>
-	<p>
-		Feel free to <a href="http://www.google.com/recaptcha/mailhide/d?k=01vxJtIxVGu_eJe0Fxs0AM_A==&amp;c=L2CMOaRjyhbCdhpF0d12VdXsvxL1ZXgaln_kX2lS0PA=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501vxJtIxVGu_eJe0Fxs0AM_A\75\75\46c\75L2CMOaRjyhbCdhpF0d12VdXsvxL1ZXgaln_kX2lS0PA\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="email me">email me</a> at any time!
-	</p>
+<h3>Contact</h3>
+<p>
+	Feel free to contact me through any of the following means!
+</p>
+<div id="contacts">
+	<div class="contact">
+		<i class="icon-mail-alt"></i>
+		<span><a href="mailto:me@stanleycen.com">me@stanleycen.com</a></span>
+	</div>
+	<div class="contact">
+		<i class="icon-github"></i>
+		<span><a href="http://github.com/scen">scen</a></span>
+	</div>
+	<div class="contact">
+		<i class="icon-skype"></i>
+		<span><a href="skype:priority_queue">priority_queue</a></span>
+	</div>
+	<div class="contact">
+		<i class="icon-facebook"></i>
+		<span><a href="http://facebook.com/stanley.cen">stanley.cen</a></span>
+	</div>
+	<div class="contact">
+		<i class="icon-gplus-squared"></i>
+		<span><a href="https://plus.google.com/105156423030564066738">jiecenzhao</a></span>
+	</div>
 </div>
