--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,6 +9,7 @@
 		<% end %>
 	</title>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'/>
+	<link href='/fontello.css' rel="stylesheet" type="text/css" />
 	<link href="/main.css" rel="stylesheet"/>
 	<link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-buttons.css" />
 	<link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-thumbs.css" />
