--- a/views/projects_all.erb
+++ b/views/projects_all.erb
@@ -3,7 +3,7 @@
 	
 	<ul>
 		<% Project.all.each_with_index do |(slug, proj), idx| %>
-		<li class="proj <%= 'bottom' if idx == Project.all.length - 1 %>">
+		<li class="proj">
 			<div class="header">
 				<h4>
 					<a href="/project/<%= slug %>"><%= proj.title %></a>
